# gamefw

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: platform.h
src/framework/: CMakeLists.txt
src/game/: CMakeLists.txt  main.cc
